[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/LoadDialog.gd" type="Script" id=1]
[ext_resource path="res://ui/button_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/back_button.png" type="Texture" id=3]

[node name="LoadSaveDialog" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 468.0
margin_bottom = 468.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_right = 468.0
margin_bottom = 348.0
size_flags_vertical = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 468.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 372.0
margin_right = 468.0
margin_bottom = 468.0

[node name="ClosePopup" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 206.0
margin_bottom = 96.0
size_flags_horizontal = 3
icon = ExtResource( 3 )
flat = true

[node name="LoadSave" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 210.0
margin_right = 468.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
theme = ExtResource( 2 )
text = "Завантажити"
[connection signal="item_activated" from="MarginContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ClosePopup" to="." method="_on_ClosePopup_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LoadSave" to="." method="_on_LoadSave_pressed"]
